TestSuite/PascalABCTests/errors/err0008.pas
var a : integer;
begin
a := Dec(a);
end.